generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

enum AppointmentStatus {
  SCHEDULED
  CONFIRMED
  COMPLETED
  CANCELED
}

enum ReceivedBy {
  CLINIC
  PROFESSIONAL
}

enum BillingStatus {
  PENDING
  PARTIALLY_PAID
  PAID
}

enum CashRegisterStatus {
  OPEN
  CLOSED
}

enum CashMovementType {
  INCOME
  EXPENSE
}

enum CashMovementStatus {
  PENDING
  PAID
}

enum PaymentMethod {
  CASH
  PIX
  CREDIT_CARD
  DEBIT_CARD
  TRANSFER
  OTHER
}

enum ServiceRiskLevel {
  LOW
  MEDIUM
  HIGH
}

enum ClinicPlan {
  TRIAL
  INDIVIDUAL
  TEAM
}

enum ClinicUserRole {
  ADMIN
  PROFESSIONAL
}

model Clinic {
  id        String     @id @default(uuid())
  plan      ClinicPlan @default(INDIVIDUAL)
  trialEndsAt DateTime?
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt

  businessProfile BusinessProfile?
  clinicUsers     ClinicUser[]
  clients         Client[]
  services        Service[]
  professionals   Professional[]
  rooms           Room[]
  appointments    Appointment[]
  billings        Billing[]
  cashRegisters   CashRegister[]
  cashMovements   CashMovement[]
}

model ClinicUser {
  id             String         @id @default(uuid())
  clinicId       String
  userId         String
  professionalId String?        @unique
  role           ClinicUserRole @default(ADMIN)
  createdAt      DateTime       @default(now())
  updatedAt      DateTime       @updatedAt

  clinic       Clinic        @relation(fields: [clinicId], references: [id], onDelete: Cascade)
  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  professional Professional? @relation(fields: [professionalId], references: [id], onDelete: SetNull)

  @@unique([clinicId, userId])
  @@index([userId])
  @@index([clinicId, role])
}

model User {
  id           String   @id @default(uuid())
  name         String
  email        String   @unique
  passwordHash String?
  cpf          String?  @unique
  admin        Boolean  @default(false)
  plan         ClinicPlan @default(TRIAL)
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt

  businessProfile BusinessProfile?
  clients         Client[]
  services        Service[]
  professionals   Professional[]
  rooms           Room[]
  appointments    Appointment[]
  billings        Billing[]
  cashRegisters   CashRegister[]
  cashMovements   CashMovement[]
  clinicUsers     ClinicUser[]
  refreshTokens   RefreshToken[]
  inviteTokens    InviteToken[]
}

model BusinessProfile {
  id                    String    @id @default(uuid())
  userId                String    @unique
  clinicId              String?   @unique
  businessName          String
  cnpj                  String?   @unique
  hasTeam               Boolean   @default(false)
  usesRooms             Boolean   @default(false)
  onboardingCompletedAt DateTime?
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt

  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)
  clinic Clinic? @relation(fields: [clinicId], references: [id], onDelete: SetNull)
}

model Client {
  id        String   @id @default(uuid())
  userId    String
  clinicId  String
  name      String
  email     String?
  phone     String
  cpf       String?
  notes     String?
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  clinic       Clinic        @relation(fields: [clinicId], references: [id], onDelete: Cascade)
  appointments Appointment[]

  @@unique([clinicId, cpf])
  @@index([clinicId])
  @@index([userId])
}

model Service {
  id              String           @id @default(uuid())
  userId          String
  clinicId        String
  name            String
  description     String?
  price           Decimal          @db.Decimal(10, 2)
  durationMinutes Int
  riskLevel       ServiceRiskLevel @default(LOW)
  iconKey         String           @default("face")
  active          Boolean          @default(true)
  createdAt       DateTime         @default(now())
  updatedAt       DateTime         @updatedAt

  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  clinic       Clinic        @relation(fields: [clinicId], references: [id], onDelete: Cascade)
  appointments Appointment[]

  @@index([clinicId])
  @@index([userId])
}

model Appointment {
  id             String            @id @default(uuid())
  userId         String
  clinicId       String
  clientId       String
  serviceId      String
  professionalId String?
  roomId         String?
  scheduledAt    DateTime
  status         AppointmentStatus @default(SCHEDULED)
  receivedBy     ReceivedBy        @default(CLINIC)
  notes          String?
  createdAt      DateTime          @default(now())
  updatedAt      DateTime          @updatedAt

  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  clinic       Clinic        @relation(fields: [clinicId], references: [id], onDelete: Cascade)
  client       Client        @relation(fields: [clientId], references: [id], onDelete: Cascade)
  service      Service       @relation(fields: [serviceId], references: [id], onDelete: Cascade)
  professional Professional? @relation(fields: [professionalId], references: [id], onDelete: SetNull)
  room         Room?         @relation(fields: [roomId], references: [id], onDelete: SetNull)
  billing      Billing?

  @@index([clinicId])
  @@index([clinicId, scheduledAt])
  @@index([userId])
  @@index([userId, scheduledAt])
  @@index([clientId])
  @@index([serviceId])
  @@index([professionalId])
  @@index([roomId])
}

model Professional {
  id        String   @id @default(uuid())
  userId    String
  clinicId  String
  name      String
  specialty String
  email     String?
  phone     String
  status    Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  clinic       Clinic        @relation(fields: [clinicId], references: [id], onDelete: Cascade)
  appointments Appointment[]
  clinicUser   ClinicUser?
  cashRegisters CashRegister[]
  cashMovements CashMovement[]

  @@index([clinicId])
  @@index([userId])
}

model Room {
  id        String   @id @default(uuid())
  userId    String
  clinicId  String
  name      String
  color     String?
  active    Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  clinic       Clinic        @relation(fields: [clinicId], references: [id], onDelete: Cascade)
  appointments Appointment[]

  @@unique([clinicId, name])
  @@index([clinicId])
  @@index([userId])
}

model RefreshToken {
  id        String   @id @default(uuid())
  userId    String
  token     String   @unique
  expiresAt DateTime
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model InviteToken {
  id        String   @id @default(uuid())
  userId    String
  token     String   @unique
  expiresAt DateTime
  usedAt    DateTime?
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, usedAt, expiresAt])
}

model Billing {
  id                     String        @id @default(uuid())
  userId                 String
  clinicId               String
  appointmentId          String?       @unique
  appointmentScheduledAt DateTime
  clientId               String
  clientName             String
  serviceId              String
  serviceName            String
  professionalId         String?
  professionalName       String?
  amount                 Decimal       @db.Decimal(10, 2)
  paidAmount             Decimal       @default(0) @db.Decimal(10, 2)
  remainingAmount        Decimal       @db.Decimal(10, 2)
  status                 BillingStatus @default(PENDING)
  receivedBy             ReceivedBy    @default(CLINIC)
  createdAt              DateTime      @default(now())
  updatedAt              DateTime      @updatedAt

  user        User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  clinic      Clinic         @relation(fields: [clinicId], references: [id], onDelete: Cascade)
  appointment Appointment?   @relation(fields: [appointmentId], references: [id], onDelete: SetNull)
  movements   CashMovement[]

  @@index([clinicId])
  @@index([clinicId, status])
  @@index([clinicId, createdAt])
  @@index([userId])
  @@index([userId, status])
  @@index([userId, createdAt])
}

model CashRegister {
  id                    String             @id @default(uuid())
  userId                String
  clinicId              String
  professionalId        String?
  scopeKey              String
  registerDate          DateTime
  status                CashRegisterStatus @default(OPEN)
  openingAmount         Decimal            @default(0) @db.Decimal(10, 2)
  totalPaidSnapshot     Decimal            @default(0) @db.Decimal(10, 2)
  totalExpensesSnapshot Decimal            @default(0) @db.Decimal(10, 2)
  totalBalanceSnapshot  Decimal            @default(0) @db.Decimal(10, 2)
  informedClosingAmount Decimal?           @db.Decimal(10, 2)
  differenceAmount      Decimal?           @db.Decimal(10, 2)
  openedAt              DateTime           @default(now())
  closedAt              DateTime?
  createdAt             DateTime           @default(now())
  updatedAt             DateTime           @updatedAt

  user         User           @relation(fields: [userId], references: [id], onDelete: Cascade)
  clinic       Clinic         @relation(fields: [clinicId], references: [id], onDelete: Cascade)
  professional Professional?  @relation(fields: [professionalId], references: [id], onDelete: SetNull)
  movements    CashMovement[]

  @@unique([clinicId, registerDate, scopeKey])
  @@index([clinicId])
  @@index([clinicId, status])
  @@index([clinicId, professionalId, registerDate])
  @@index([userId])
  @@index([userId, status])
}

model CashMovement {
  id             String             @id @default(uuid())
  userId         String
  clinicId       String
  professionalId String?
  billingId      String?
  cashRegisterId String?
  type           CashMovementType
  status         CashMovementStatus @default(PAID)
  paymentMethod  PaymentMethod?
  description    String?
  amount         Decimal            @db.Decimal(10, 2)
  countsInCash   Boolean            @default(true)
  occurredAt     DateTime           @default(now())
  createdAt      DateTime           @default(now())
  updatedAt      DateTime           @updatedAt

  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  clinic       Clinic        @relation(fields: [clinicId], references: [id], onDelete: Cascade)
  professional Professional? @relation(fields: [professionalId], references: [id], onDelete: SetNull)
  billing      Billing?      @relation(fields: [billingId], references: [id], onDelete: SetNull)
  cashRegister CashRegister? @relation(fields: [cashRegisterId], references: [id], onDelete: SetNull)

  @@index([clinicId])
  @@index([professionalId])
  @@index([clinicId, occurredAt])
  @@index([userId])
  @@index([billingId])
  @@index([cashRegisterId])
  @@index([userId, occurredAt])
}
